implemented simple streamfield on FlexPage

--- a/flex/templates/flex/flex_page.html
+++ b/flex/templates/flex/flex_page.html
@@ -4,6 +4,12 @@
 
 {% block content %}
 
-{{page.subtitle}}
+<div>
+    {{page.subtitle}}
+</div>
+
+{% for block in page.body %}
+    {% include_block block %}
+{% endfor %}
 
 {% endblock content %}
