some improvements to BlogDetailPage and BlogListingPage

--- a/blog_pages/templates/blog_pages/blog.html
+++ b/blog_pages/templates/blog_pages/blog.html
@@ -5,7 +5,7 @@
 {% block content %}
 
 <div>
-    {{page.custom_title}}
+    <h2>{{page.custom_title}}</h2>
 </div>
 
 {% image page.blog_banner_image max-300x200 sizes="(max-width: 600px) max-150x100" %}
