--- a/my_blog/templates/base.html
+++ b/my_blog/templates/base.html
@@ -40,7 +40,7 @@
     <body class="{% block body_class %}{% endblock %}">
         {% wagtailuserbar %}
 
-        <div style="width: 70%; height: 100vh; margin: 0 auto; background-color: #f9f9f9;">
+        <div style="width: 70%; min-height: 100vh; margin: 0 auto; background-color: #f9f9f9;">
         {% block content %}{% endblock %}
         </div>
 
